# eks

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  bb_crop.ipynb  bbox_uncrop.ipynb  ekf.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yaml  publish.yaml  pytest.yaml  tests.yaml
data/: 180607_004.train_frames=75.rng=2.csv  180607_004.train_frames=75.rng=4.csv
data/fly/: 05272019_fly4_0_R1C24_Cam-A_rot-ccw-0.06_sec (2).csv  05272019_fly4_0_R1C24_Cam-A_rot-ccw-0.06_sec.rng=0.csv  05272019_fly4_0_R1C24_Cam-A_rot-ccw-0.06_sec.rng=2.csv  05272019_fly4_0_R1C24_Cam-B_rot-ccw-0.06_sec (2).csv  05272019_fly4_0_R1C24_Cam-B_rot-ccw-0.06_sec (3).csv  05272019_fly4_0_R1C24_Cam-B_rot-ccw-0.06_sec.rng=0.csv  05272019_fly4_0_R1C24_Cam-C_rot-ccw-0.06_sec.rng=0.csv  05272019_fly4_0_R1C24_Cam-C_rot-ccw-0.06_sec.rng=1.csv  05272019_fly4_0_R1C24_Cam-C_rot-ccw-0.06_sec.rng=2.csv  calibration.toml
data/ibl-paw/: 3f859b5c-e73a-4044-b49e-34bb81e96715.left.rng=0.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.left.rng=1.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.left.rng=2.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.left.rng=3.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.left.rng=4.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.right.rng=0.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.right.rng=1.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.right.rng=2.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.right.rng=3.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.right.rng=4.csv  3f859b5c-e73a-4044-b49e-34bb81e96715.timestamps.left.npy  3f859b5c-e73a-4044-b49e-34bb81e96715.timestamps.right.npy
data/ibl-pupil/: 5285c561-80da-4563-8694-739da92e5dd0.left.rng=0.csv  5285c561-80da-4563-8694-739da92e5dd0.left.rng=1.csv  5285c561-80da-4563-8694-739da92e5dd0.left.rng=2.csv  5285c561-80da-4563-8694-739da92e5dd0.left.rng=3.csv  5285c561-80da-4563-8694-739da92e5dd0.left.rng=4.csv
data/mirror-mouse/: 180607_004.train_frames=75.rng=0.csv  180607_004.train_frames=75.rng=1.csv  180607_004.train_frames=75.rng=3.csv
data/mirror-mouse-separate/: 180607_004.train_frames=75.rng=0.bot.csv  180607_004.train_frames=75.rng=0.top.csv  180607_004.train_frames=75.rng=1.bot.csv  180607_004.train_frames=75.rng=1.top.csv  180607_004.train_frames=75.rng=2.bot.csv  180607_004.train_frames=75.rng=2.top.csv  180607_004.train_frames=75.rng=3.bot.csv  180607_004.train_frames=75.rng=3.top.csv  180607_004.train_frames=75.rng=4.bot.csv  180607_004.train_frames=75.rng=4.top.csv
docs/: command-line_arguments.md  eks_smoothers.md  ensemble_kalman.md  requirements.md  scripts.md  singlecam_overview.md
eks/: __init__.py  autosmooth.py  autotune_smooth_param.py  command_line_args.py  core.py  ensemble_kalman.py  ibl_paw_multicam_smoother.py  ibl_paw_multiview_smoother.py  ibl_pupil_smoother.py  jax_singleview_smoother.py  kalman_backends.py  marker_array.py  multicam_smoother.py  multiview_pca_smoother.py  pupil_smoother.py  singlecam_smoother.py  singlecam_smoother_parallel.py  singleview_smoother.py  slp_test.py  stats.py  utils.py
eks/cli/: __init__.py  _utils.py  cmd_ibl_paw.py  cmd_ibl_pupil.py  cmd_mirrored_multicam.py  cmd_multicam.py  cmd_singlecam.py  main.py
scripts/: EKSNLLPlot.py  ensemble_kalman_multicam_example.py  ensemble_kalman_multiview_paw_example.py  ensemble_kalman_pupil_example.py  general_scripting.py  general_scripts.py  ibl_paw_multiview_example.py  ibl_pupil_example.py  mirrored_multicam_example.py  multicam_example.py  multiview_paw_example.py  plotting_aeks.py  pupil_example.py  singlecam_example.py  timing.py
smoothers/: EKSNLLPlot.py  __init__.py  general_smoothing.py  multiview_pca_smoother.py  pupil_smoother.py  singleview_smoother.py  utils.py
tests/: conftest.py  run_tests.py  test_core.py  test_ibl_paw_multicam_smoother.py  test_ibl_pupil_smoother.py  test_marker_array.py  test_multicam_smoother.py  test_singlecam_smoother.py  test_stats.py  test_utils.py
tests/cli/: test__utils.py  test_cmd_ibl_paw.py  test_cmd_ibl_pupil.py  test_cmd_mirrored_multicam.py  test_cmd_multicam.py  test_cmd_singlecam.py  test_main.py
tests/integration/: README.md  test_ibl_paw.py  test_ibl_pupil.py  test_mirrored_multicam.py  test_multicam.py  test_singlecam.py
tests/scripts/: README.md  test_ibl_paw_multicam_example.py  test_ibl_paw_multiview_example.py  test_ibl_pupil_example.py  test_mirrored_multicam_example.py  test_multicam_example.py  test_singlecam_example.py
