[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ensemble-kalman-smoother"
version = "4.6.0"
description = "Ensembling and kalman smoothing for pose estimation"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cole Hurwitz"},
    { name = "Keemin Lee"},
    { name = "Matt Whiteway" },
]
maintainers = [
    { name = "Matt Whiteway"},
]
keywords = ["machine learning", "state space models", "pose estimation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "aniposelib (>=0.8.0)",
    # Transient dep of dynamax, pinned to prevent starlette upgrade which breaks LPA.
    # https://github.com/paninski-lab/eks/issues/70#issuecomment-4217129266
    "python-fasthtml (<=0.12.50)",
    "dynamax (<=1.0.1)",
    # Dynamax needs jax pinned: https://github.com/paninski-lab/eks/issues/70
    "jax (<=0.4.36)",
    "jaxlib",
    "matplotlib",
    "numpy (>=2.0.0)",
    "opencv-python-headless",
    "optax",
    "pandas",
    "scikit-learn",
    "scipy (>=1.2.0)",
    "sleap_io",
    "toml",
    "tqdm",
]

[project.scripts]
eks = "eks.cli.main:main"

[project.urls]
repository = "https://github.com/paninski-lab/eks"
documentation = "https://github.com/paninski-lab/eks"

[tool.poetry]
packages = [
    {include = "eks"}
]

# project.dependencies are used for metadata when building the project, tool.poetry.dependencies is only used to enrich
# project.dependencies for locking
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[project.optional-dependencies]
dev = [
    "ipython",  # dumb dependency issue in fastprogress, installing here so CI doesn't fail
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports/variables)
    "I",   # isort
    "UP",  # pyupgrade (modernize syntax: Tuple->tuple, Union->|, etc.)
    "B",   # flake8-bugbear (real bugs: mutable defaults, broad excepts, etc.)
    "N",   # pep8-naming
]
ignore = [
    "E501",   # line too long (handled by editor)
    "B006",   # mutable default args: address separately
    "B023",   # loop-variable closure: JAX fori_loop callbacks have a fixed (i, carry) signature
    "N802",   # function name not lowercase: public API uses camelCase (input_dfs_to_markerArray etc.)
    "N803",   # argument name should be lowercase (conflicts with math conventions: K, T, etc.)
    "N806",   # variable in function should be lowercase (same reason)
]

[tool.ruff.lint.isort]
known-first-party = ["eks"]

[tool.pyright]
reportMissingImports = "none"
reportMissingModuleSource = "none"

[tool.pytest.ini_options]
testpaths = "tests"
generate_report_on_test = "True"
